# ANLPpro

./: .gitignore  README.md  final.csv  hand  he.md  merged.csv  merged_flagged_problems.csv  pyproject.toml  sample_metrics.py  sc1.py  sc2.py  sc3.py  scf.py  test
2025_scrapes/: flagged_problems.csv
2025_scrapes/prompts/: prompt_2055_A.txt  prompt_2055_B.txt  prompt_2055_C.txt  prompt_2055_D.txt  prompt_2056_B.txt  prompt_2056_C.txt  prompt_2056_D.txt  prompt_2057_A.txt  prompt_2057_B.txt  prompt_2057_C.txt  prompt_2057_D.txt  prompt_2059_A.txt  prompt_2059_B.txt  prompt_2059_C.txt  prompt_2059_D.txt  prompt_2060_A.txt  prompt_2060_B.txt  prompt_2060_C.txt  prompt_2060_D.txt  prompt_2060_E.txt  prompt_2060_F.txt  prompt_2060_G.txt  prompt_2061_A.txt  prompt_2061_B.txt  prompt_2061_C.txt  prompt_2061_D.txt  prompt_2061_E.txt  (+18 more)
2025_scrapes2/: flagged_problems.csv
Evidence/: backup.csv  final.csv
accepted/: check.txt
outputs/: 2119_B.cpp  2119_B.raw.txt  2119_B.response.txt  2119_C.cpp  2119_C.raw.txt  2119_C.response.txt  2119_E.cpp  2119_E.raw.txt  2119_E.response.txt  2119_F.cpp  2119_F.raw.txt  2119_F.response.txt  2122_A.cpp  2122_A.raw.txt  2122_A.response.txt  2122_B.cpp  2122_B.raw.txt  2122_B.response.txt  2122_C.cpp  2122_C.raw.txt  2122_C.response.txt  2122_D.cpp  2122_D.raw.txt  2122_D.response.txt  2122_G.cpp  2122_G.raw.txt  2122_G.response.txt  2123_B.cpp  2123_B.raw.txt  2123_B.response.txt  2123_D.cpp  2123_D.raw.txt  2123_D.response.txt  2123_F.cpp  2123_F.raw.txt  2123_F.response.txt  2124_C.cpp  2124_C.raw.txt  2124_C.response.txt  2124_D.cpp  (+21 more)
(+108 files in other folders)
