[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "cloudscraper>=1.2.71",
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.5",
    "hydra-core>=1.3.2",
    "lxml>=6.0.2",
]
