[project]
name = "anlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.92.0",
    "beautifulsoup4>=4.14.2",
    "cloudscraper>=1.2.71",
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.5",
    "hydra-core>=1.3.2",
    "lxml>=6.0.2",
    "mistralai>=2.3.1",
    "omegaconf>=2.3.0",
    "openai>=2.31.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.3",
]
